syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter { //likt en interface
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetFullName(FullNameRequest) returns (FullNameReply);
}

// The request message containing the user's name.
message HelloRequest { //ordning på värderna,. 1,2,3 osv index ordning
  string name = 1;
  string phone = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message FullNameRequest{
	string first_name = 1;
	string last_name = 2;
}

message FullNameReply{
	string full_name = 1;
}

